--- a/package.json
+++ b/package.json
@@ -66,6 +66,6 @@
 		"from": "src/**/*.html",
 		"to": "src/blocks",
 		"js": "src/js/blocks.js",
-		"omit": "@@,js-,active,col,row"
+		"omit": "@@,js-,active"
 	}
 }
